Reapply "add gRPC API verify email"
This reverts commit 8182b497d947ad0f6332e2ad8137de6ce6736915.
